--- a/code/ch2_autoencoder.ipynb
+++ b/code/ch2_autoencoder.ipynb
@@ -6,7 +6,7 @@
       "name": "ch2_autoencoder.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPlwI12kyYmSQNnQPiebGdO",
+      "authorship_tag": "ABX9TyOEtDjXObqaj5G6/wDh5sP4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -164,7 +164,8 @@
         "z_mean = Dense(latent_dim, name='mean')(h) # 잠재공간의 평균을 정의\n",
         "z_log_var = Dense(latent_dim, name='log-variance')(h) # 잠재 공간의 로그 분산을 정의\n",
         "\n",
-        "z = Lambda(sampling, output_shape=(latent_dim,))([z_mean, z_log_var]) # 텐서플로우 백엔드를 사용할 때는 output_shape가 꼭 필요하진 않음\n",
+        "# 텐서플로우 백엔드를 사용할 때는 output_shape가 꼭 필요하진 않음\n",
+        "z = Lambda(sampling, output_shape=(latent_dim,))([z_mean, z_log_var])\n",
         "\n",
         "encoder = Model(x, [z_mean, z_log_var, z], name='encoder') # 케라스 모델 인코더 정의\n",
         "\n",
@@ -621,7 +622,7 @@
         "digit_size = 28\n",
         "figure = np.zeros((digit_size * n, digit_size * n))\n",
         "# 잠재 공간을 가우스 분포로 가정했기 때문에 잠재 변수 z의 값을 만들기 위해\n",
-        "# 일정 간격으로 떨어진 좌표를 가우스 분포의 역 CDF(ppf)를 통해 변환합니다.\n",
+        "# 일정 간격(0.15)으로 떨어진 좌표를 가우스 분포의 역 CDF(ppf)를 통해 변환합니다.\n",
         "grid_x = norm.ppf(np.linspace(0.05, 0.95, n))\n",
         "grid_y = norm.ppf(np.linspace(0.05, 0.95, n))\n",
         "\n",
